@@ -887,6 +887,9 @@ Release 0.21.0 - Unreleased
 
     HDFS-1000. Updates libhdfs to the new API for UGI (ddas)
 
+    HDFS-609. Create a file with the append flag does not work in HDFS.
+    (tomwhite)
+
 Release 0.20.3 - Unreleased
 
   IMPROVEMENTS
